--- a/paginas/tabela.html
+++ b/paginas/tabela.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: #00f535a1;
+        background-color: #2f00ffc5;
         padding: 40px;
       }
   
@@ -46,6 +46,9 @@
       tr:hover {
         background-color: #ff0000;
       }
+      .voltar{
+        font-size: 60px;
+      }
     </style>
   </head>
   <body>
@@ -79,5 +82,10 @@
         <td>3 dias úteis</td>
       </tr>
     </table>
+<br><br><br><a href="../index.html"><h1 class="voltar"><i> Voltar</i></h1></a>
+
+
+
+
 </body>
 </html>
