--- a/index.html
+++ b/index.html
@@ -72,8 +72,41 @@
                 <div class="web"><div class="titulo-web">
                     <img src="./img/cooltext481151051726895 (1).png" alt="" width="200px" height="50px">
                 </div>
-                <div><p></p>
-
+                <div>
+                <h2 class="topico">Quem sou eu</h2>
+                <img src="" alt="">
+                <p class="texto-principal"></p>
+                <hr>
+                <h2 class="topico">Onde estudei</h2>
+                <p>Eu fiz o ensino fundamental na Eliza Pacheco Alves, e o ensino médio na Antonio Lemos Junior</p>
+                <div>
+                    <img src="./img/eliza.jpg" alt="">
+                    <img src="./img/antonio.jpg" alt="">
+                </div>
+                <h2 class="topico">Minhas midias preferidas</h2>
+                <h2 class="topico">Vídeo</h2>
+                    <video width="500px" height="500px" controls>
+                       <source src="./media/videoplayback.mp4" type="video/mp4">
+                    </video>                  
+           <h2 class="topico">Aúdio</h2>
+           <audio  preload="metadata" controls class="audioss">
+               <source src="./media/Audioslave - Like a Stone (Official Video).mp3" type="audio/ogg">
+           </audio>
+           <h2 class="topico">Minhas disciplinas</h2>
+           <ul>
+            <li><strong>Lógica para Computação:</strong> Estudo de raciocínio lógico e formalização de problemas, base para algoritmos e programação.</li><br>
+            <li><strong>Fundamentos da Computação:</strong> Introdução aos conceitos essenciais da computação, como hardware, software e sistemas numéricos.</li><br>
+            <li><strong>Desenvolvimento e Design de Banco de Dados:</strong> Criação, modelagem e gerenciamento de bancos de dados relacionais com foco em eficiência e organização da informação.</li><br>
+            <li><strong>UX Design:</strong> Princípios de usabilidade e experiência do usuário aplicados ao design de interfaces digitais.</li><br>
+            <li><strong>Texto Científico:</strong> Técnicas de escrita acadêmica, estruturação e normas para produção de textos científicos.</li><br>
+            <li><strong>Construção de Software para Web:</strong> Desenvolvimento de aplicações web com foco em front-end e back-end utilizando tecnologias modernas.</li>
+          </ul>
+          <h2 class="topico">Meus objetivos</h2>
+          <ol type="1">
+            <li>Quero comprar um Nissan 350z 2008</li>
+            <li>Quero me casar, ter filhos e viver com uma mulher o resto da minha vida</li>
+            <li>Quero consguir terminar a graduação e conseguir um emprego na área</li>
+          </ol>
                 </div>
 
                 </div>
@@ -86,6 +119,10 @@
             <img src="./img/windows.png" alt="" width="30px" height="30px">
             <h1>Start</h1>
         </button>
+       <a href="https://www.retrogames.cz/play_414-DOS.php"> <button class="doom-butt">
+            <img class="image-doom" src="./img/logo doom.jpg" alt="" width="20px" height="25px">
+            <h1>Doom</h1>
+        </button></a>
 
     </div>
 </main>
